[package]
name = "urchin-rmk-firmware"
version = "0.1.0"
authors = ["Timothé Bailly-Barthez <timothe@bailly-barthez.com>"]
description = "Urchin keyboard firmware for Ergo-L with Rust"
homepage = "https://github.com/TimoBbz/urchin-rmk-firmware"
repository = "https://github.com/TimoBbz/urchin-rmk-firmware"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# rmk = { git = "https://github.com/HaoboGu/rmk", rev = "63f9d29629d6126d4d7a5104da96452f539b95c0", default-features = false, features = [
# rmk = { path = "../rmk/rmk", default-features = false, features = [
rmk = { version = "0.8", default-features = false, features = [
    "storage",
    "nrf52840_ble",
    "split",
    "async_matrix",
    "adafruit_bl",
    "controller",
] }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", default-features = false, features = [
    "defmt",
    "peripheral",
    "central",
    "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", default-features = false, features = [
    "defmt",
    "critical-section-impl",
    "nrf52840",
] }
bt-hci = { version = "0.6", default-features = false, features = ["defmt"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = [
    "tick-hz-32_768",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.8", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.9", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"

rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }
sharp-memory-display = { path = "../sharp-memory-display", default-features = false, features = [
    "ls011b7dh03",
] }
embedded-graphics = "0.7.1"
itoa = "1.0.15"
embedded-hal = "0.2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

# Split keyboard example
[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
